Mejora en la visualizacion de los mensajes de error o exito, colocacion de cargando en el login, mejora en los scroll de visualizacion

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SIBEP</title>
+  <title>SIBEP | CARTAGENA</title>
   <base href="/">  
   <meta name="viewport" content="width=device-width, user-scalable=no">
 
